[tool.poetry]
name = "archiver"
version = "0.1.0"
description = ""
authors = ["Anatoliy <Anatoliy.Velizhanin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
